--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Sabores típicos brasileiro</title>
+    <title>Agricultura 4.0</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -231,7 +231,7 @@
             </div>
         </section>
         <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
-            <h2 class="text-center pt-5"> máquinas agrícolas</h2>
+            <h2 class="text-center pt-5"> Máquinas agrícolas</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
